--- a/src/pug/components/img-view.pug
+++ b/src/pug/components/img-view.pug
@@ -17,8 +17,8 @@ mixin img-view(value = {})
     figure.text-center
       .img-view-contain
         .placeholder-img
-          img(src!=`${urlParse("w_50,e_blur:500")}.jpg` alt=alt loading=loading)&attributes(attributes)
-        img.core-img(data-src!=`${urlParse()}.jpg` alt=alt loading=loading)&attributes(attributes)
+          img(src!=`${urlParse("w_50,e_blur:500")}.jpg` crossorigin alt=alt loading=loading)&attributes(attributes)
+        img.core-img(data-src!=`${urlParse()}.jpg` crossorigin alt=alt loading=loading)&attributes(attributes)
         noscript
-          img.no-script-img(src!=`${urlParse()}.jpg` aria-hidden="true" alt=alt loading=loading)&attributes(attributes)
+          img.no-script-img(src!=`${urlParse()}.jpg` crossorigin aria-hidden="true" alt=alt loading=loading)&attributes(attributes)
       figcaption= alt
