--- a/src/pug/pages/projects/sarbot.pug
+++ b/src/pug/pages/projects/sarbot.pug
@@ -59,7 +59,7 @@ block content
     br
     br
     figure.text-center
-      video.w-full(controls crossorigin preload="none" poster="https://res.cloudinary.com/okikio-assets/video/upload/joseph-projects/sarbot/Joseph_s_Trimmed_Video.jpg" name='media' loading="lazy")
+      video.video.w-full(controls crossorigin preload="none" poster="https://res.cloudinary.com/okikio-assets/video/upload/joseph-projects/sarbot/Joseph_s_Trimmed_Video.jpg" name='media' loading="lazy")
         source(crossorigin src='https://res.cloudinary.com/okikio-assets/video/upload/q_auto:low,vc_auto/joseph-projects/sarbot/Joseph_s_Trimmed_Video.mp4' type='video/mp4')
 
       figcaption.italic Video displaying the capabilities of the final design of SarBot
