--- a/src/pug/pages/projects/ultima-apparel.pug
+++ b/src/pug/pages/projects/ultima-apparel.pug
@@ -40,8 +40,8 @@ block content
     })(width="640px" height="856px")
     br
     figure.text-center
-      video.mx-auto(controls preload="metadata" poster="https://res.cloudinary.com/okikio-assets/image/upload/v1604208187/joseph-projects/ultima-apparel/00_-_Pres_Video.jpg" name='media' width="640px")
-        source(src='https://res.cloudinary.com/okikio-assets/image/upload/f_auto,q_auto/joseph-projects/ultima-apparel/00_-_Pres_Video.mp4' type='video/mp4')
+      video.video.mx-auto(controls preload="none" crossorigin poster="https://res.cloudinary.com/okikio-assets/image/upload/v1604208187/joseph-projects/ultima-apparel/00_-_Pres_Video.jpg" name='media' width="640px")
+        source(crossorigin src='https://res.cloudinary.com/okikio-assets/image/upload/f_auto,q_auto/joseph-projects/ultima-apparel/00_-_Pres_Video.mp4' type='video/mp4')
 
       figcaption.italic Video of MoCap for material handling
     br
@@ -65,7 +65,7 @@ block content
     br
     br
     figure.text-center
-      video.w-full(controls preload="none" crossorigin poster="https://res.cloudinary.com/okikio-assets/video/upload/joseph-projects/ultima-apparel/PostureAnalysis.jpg" name='media' loading="lazy")
+      video.video.w-full(controls preload="none" crossorigin poster="https://res.cloudinary.com/okikio-assets/video/upload/joseph-projects/ultima-apparel/PostureAnalysis.jpg" name='media' loading="lazy")
         source(crossorigin src='https://res.cloudinary.com/okikio-assets/video/upload/f_auto,q_auto/joseph-projects/ultima-apparel/PostureAnalysis.mp4' type='video/mp4')
 
       figcaption.italic Prototype Software
@@ -74,7 +74,7 @@ block content
     br
     br
     figure.text-center
-      video.w-full(controls preload="none" crossorigin poster="https://res.cloudinary.com/okikio-assets/video/upload/joseph-projects/ultima-apparel/MoCapLimitedTest.jpg" name='media' loading="lazy")
+      video.video.w-full(controls preload="none" crossorigin poster="https://res.cloudinary.com/okikio-assets/video/upload/joseph-projects/ultima-apparel/MoCapLimitedTest.jpg" name='media' loading="lazy")
         source(crossorigin src='https://res.cloudinary.com/okikio-assets/video/upload/q_auto:low,vc_auto/joseph-projects/ultima-apparel/MoCapLimitedTest.mp4' type='video/mp4')
 
       figcaption.italic MoCap Development
